--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   lottie: ^1.2.2
   cached_network_image: ^3.2.0
+  get: ^4.6.1
 
 
 dev_dependencies:
@@ -22,3 +23,4 @@ flutter:
   assets:
     - assets/loading_lottie.json
     - assets/images/
+    - assets/icons/
