--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cached_network_image: ^3.2.0
   flutter_rating_bar: ^4.0.0
   get: ^4.6.1
+  flutter_credit_card: ^3.0.1
+  syncfusion_flutter_calendar: ^19.4.56
 
 
 dev_dependencies:
