--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get: ^4.6.1
   flutter_credit_card: ^3.0.1
   syncfusion_flutter_calendar: ^19.4.56
+#  awesome_dropdown: ^0.0.4
 
 
 dev_dependencies:
