--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,9 @@ dependencies:
   get: ^4.6.1
   flutter_credit_card: ^3.0.1
   syncfusion_flutter_calendar: ^19.4.56
-#  awesome_dropdown: ^0.0.4
+  amplify_flutter: ^0.4.0
+  amplify_auth_cognito: ^0.4.0
+
 
 
 dev_dependencies:
