--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   cached_network_image: ^3.2.0
   flutter_rating_bar: ^4.0.0
   get: ^4.6.1
-  flutter_credit_card: ^3.0.1
   syncfusion_flutter_calendar: ^19.4.56
+  flutter_staggered_grid_view: ^0.6.1
   amplify_flutter: ^0.4.0
   amplify_auth_cognito: ^0.4.0
 
