--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,8 @@ dependencies:
   syncfusion_flutter_calendar: ^19.4.56
   flutter_staggered_grid_view: ^0.6.1
   flutter_svg: ^1.0.3
-  amplify_flutter: ^0.4.0
-  amplify_auth_cognito: ^0.4.0
+#  amplify_flutter: ^0.4.0
+#  amplify_auth_cognito: ^0.4.0
   http: ^0.13.4
   logger: ^1.1.0
 
